<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/releasing_date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="@dimen/detail_poster_height"
            android:layout_height="@dimen/detail_poster_width"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/poster_content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_rating_24dp"
            android:drawableStart="@drawable/ic_rating_24dp"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="12445" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_user_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_rating"
            tools:text="Releasing on 2017-02-13" />

        <ImageView
            android:id="@+id/markAsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/favorite_content_description"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            android:onClick="markAsFavorite"
            app:srcCompat="@drawable/ic_favorite_red_24dp" />

        <TextView
            android:id="@+id/tv_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/overview_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
            tools:text="In a small town in Maine, seven children known as The Losers Club come face to face with life problems, bullies and a monster that takes the shape of a clown called Pennywise." />

        <View
            android:id="@+id/lineBreak"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview" />

        <TextView
            android:id="@+id/trailerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/trailer_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineBreak" />


        <FrameLayout
            android:id="@+id/movie_trailer_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailerLabel">

            <ProgressBar
                android:id="@+id/trailer_loading_pb"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/trailer_loading_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:visibility="gone"
                android:layout_gravity="center" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_trailer_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/watch_review_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_reviews_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_trailer_frame" />

        <FrameLayout
            android:id="@+id/movie_review_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watch_review_button">

            <ProgressBar
                android:id="@+id/review_loading_pb"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/review_loading_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:visibility="gone"
                android:layout_gravity="center" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_review_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

        </FrameLayout>



    </android.support.constraint.ConstraintLayout>
</ScrollView>